@startuml

title Diagramme de classe de la classe CaseEscalier

abstract Case {
  + ChangeLevel()
}

class CaseEscalier {
  + ChangeLevel()
}

class ZeldiabloJeu {
  + nextLevel()
  + getLaby()
}

class Labyrinthe {
  + getPlayer()
}

abstract Entite {
  + setEnVie()
  + setInventory()
  + setHp()
}

class Player {
  + setEnVie()
  + setInventory()
  + setHp()
}

Case <|-- CaseEscalier
CaseEscalier o-- ZeldiabloJeu
ZeldiabloJeu --> Labyrinthe
Labyrinthe --> Player
Entite <|-- Player

@enduml